# status-list-server

./: .dockerignore  .env.template  .gitignore  .kube-linter.yaml  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintrc  .trivyignore.yaml  .typos.toml  .yamlfmt  .yamlfmt.yml  Cargo.toml  Dockerfile  LOCAL_DEPLOYMENT.md  README.md  REDIS_TLS_SETUP.md  architecture.md  audit.toml  deny.toml  diesel.toml  docker-compose.yml  k8s-deployment-issues.md  k8s-deployment-test.sh  local-ci.sh  otel-collector.yaml  prometheus.yml  rustfmt.toml  tombi.toml  typos.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: CD.yml  CI.yml  auto_merge.yml  build-and-deploy.yml  bump_version.yml  cache.yml  cargo_deny.yml  ci-docker-ghcr.yml  codeql.yml  crate_type.yml  deploy.yml  semver_checks.yml
.kilo/command/: build.md  merge.md  plan.md  pr-review.md
.kilo/plans/: issue-143.md  issue-152.md  issue-156.md
.kiro/specs/dns-resolution-strategy-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/http-caching-headers/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/store-strategy-skip-dns-resolution/: .config.kiro  bugfix.md  design.md
artillery-tests/: .gitignore  auth-test.yml  ec-private-key.pem  ec-public-key.pem  how-to-run.md  load-test.yml  package-lock.json  package.json  processor.js  spike-test.yml  stress-test.yml  token-generator.js
artillery-tests/scripts/: processor.js  token-generator.js
artillery-tests/tests/: auth-test.yml  load-test.yml  spike-test.yml  stress-test.yml
charts/: values-local.yaml
demo/: README.md  environment.yml
demo/workflows/: 01-an-issuer-maintains-a-status-list.ipynb  01-issuer-manages-status-lists.ipynb  02-issuers-can-maintain-multiple-status-lists.ipynb  03-issuer-b-cannot-update-issuer-a-list.ipynb  04-unregistered-issuers-cannot-publish-lists.ipynb
demo/workflows/.ipynb_checkpoints/: 01-an-issuer-maintains-a-status-list-checkpoint.ipynb  02-issuers-can-maintain-multiple-status-lists-checkpoint.ipynb
demo/workflows/helpers/: fixtures.py  utils.py
doc/: REDIS_TLS_SETUP.md  k8s-deployment-issues.md
docs/: REDIS_TLS_SETUP.md  architecture.md  aws-oidc-deploy-setup.md  compliance_matrix.md  database-backends.md  detail-spec-gap.md  dns-providers.md  hexagonal-architecture.md  openapi.yaml  spec-compliance.md
docs/blog/: status-list-server.adoc  status-list-server.md
helm/: Chart.yaml  README.md  values-local.yaml  values-local.yml  values.yaml
helm/chart/: Chart.yaml  values-local.yaml  values.yaml
helm/chart/templates/: _helpers.tpl  deployment.yaml  external-secrets.yaml  ingress.yaml  network-policy.yaml  otel-collector-configmap.yaml  otel-collector-deployment.yaml  redis-ha-cert-sync.yaml  secret-store.yaml  service.yaml
helm/charts/: values-local.yaml
helm/charts/templates/: secret-store.yaml
helm/status-list-server-chart/: Chart.yaml  values-local.yaml  values-local.yml  values.yaml
helm/status-list-server-chart-local/: Chart.yaml  k8s-deployment-review-feedback.md  k8s-deployment-test.sh  values.yaml
helm/status-list-server-chart-local/templates/: _helpers.tpl  deployment.yaml  service.yaml
helm/status-list-server-chart/templates/: _helpers.tpl  deployment.yaml  external-secretes.yaml  ingress.yaml  secret-store.yaml  secretes-store.yaml  service.yaml
helm/templates/: deployment.yaml  external-secrets.yaml  ingress.yaml
k6-tests/: auth-test.js  ec-private-key.pem  ec-public-key.pem  jwt.js  load-test.js  spike-test.js  stress-test.js  token-generator.js
k6-tests/doc/: analysis.md  suggestions.md
k6-tests/k6-results/: auth-load-test-summary.json  basic-load-test-summary.json  spike-test-summary.json  stress-test-summary.json
local_test/: aws-localstack-secret-store.yaml  localstack-deployment.yaml
scripts/: db_diag.sh
src/: config.rs  lib.rs  main.rs  model.rs  models.rs  startup.rs  state.rs  test_utils.rs
src/adapters/: aws.rs  cache.rs  certificate.rs  dns.rs  memory.rs  metrics.rs  mod.rs  postgres.rs  redis.rs  sea_orm.rs  secret.rs
src/adapters/sea_orm/: README.md  migrations.rs  mod.rs  models.rs  store.rs
src/application/: mod.rs
src/auth/: auth.rs  authentication.rs  crypto.rs  errors.rs  middleware.rs  mod.rs
src/database/: README.md  connection.rs  error.rs  errors.rs  mod.rs  queries.rs  repository.rs  schema.rs  test.rs
src/database/2025-02-25-142311_status_list_token/: up.sql
src/database/migrations/: 001_status_list.sql  status_list.sql
src/domain/: mod.rs
src/ports/: mod.rs
src/test_resources/: cert_data.json  ec-private.pem  helper.rs  mod.rs  pebble_config.json  setup.rs  test_cert.der  test_cert.pem  test_key_invalid_content.pem  test_key_roundtrip.pem
src/test_utils/: mod.rs
src/utils/: bits_validation.rs  ca_gen.rs  cache.rs  cert_gen.rs  cert_manager.rs  certbot_setup.sh  errors.rs  keygen.rs  lst_gen.rs  metrics.rs  mod.rs  secretmanager.rs  security_events.rs  state.rs  telemetry.rs  token_parser.rs  x509_parser.rs
src/utils/cache/: cert_chain.rs  mod.rs  status_list.rs
src/utils/cert_manager/: builder.rs  challenge.rs  errors.rs  http_client.rs  storage.rs  strategy.rs  tests.rs
src/utils/cert_manager/challenge/: dns01.rs  http01.rs
src/utils/cert_manager/storage/: aws.rs  memory.rs  redis.rs
src/web/: credential_handler.rs  error.rs  errors.rs  handlers.rs  midlw.rs  mod.rs  publish_token_status.rs  rate_limit.rs  status_list_aggregation.rs  status_list_handler.rs  update_statuslist.rs
src/web/auth/: errors.rs  mod.rs
src/web/handlers/: acme.rs  credential_issuance.rs  issue_credential.rs  metadata.rs  mod.rs  openapi.rs  status_list_aggregation.rs
supply-chain/: audits.toml  config.toml
test/status-list-server-chart/: Chart.yaml  values.yaml
test/status-list-server-chart/templates/: deployment.yaml  external-secretes.yaml  ingress.yaml  secret-store.yaml
test_data/: gcloud_test_key.dummy.pem  helper.rs  mod.rs  test_cert2.pem
tests/: cert_provisioning.rs  docker_image_pull_bug_condition.rs  error_response_tests.rs
xtask/src/: main.rs
(+22 files in other folders)
