[package]
name = "status-list-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.5", features = ["full"] }
async-trait = "0.1"

# Web frameworks
hyper = "1.10"
hyper-util = "0.1"
reqwest = "0.13"
tower = "0.5"
hyper-rustls = { version = "0.27", features = ["http2"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.7", features = ["catch-panic", "cors", "trace"] }

# Database and ORM
sea-orm = { version = "1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
moka = { version = "0.12", features = ["future"] }

# Cryptography and Security
rand = "0.10"
pem = "3"
coset = "0.4"
instant-acme = "0.8"
rustls = "0.23"
webpki-roots = "1"
rustls-pki-types = "1.15"
secrecy = { version = "0.10", features = ["serde"] }
rcgen = { version = "0.14", features = ["pem"] }
jsonwebtoken = { version = "10.4", features = ["aws_lc_rs"] }

# Serialization
serde_json = "1.0"
serde-aux = "4.7"
serde = { version = "1.0", features = ["derive"] }

# Configuration and Environment
config = "0.15"
dotenvy = "0.15"

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0"
color-eyre = "0.6"

# Utility Libraries
uuid = "1.23"
base64 = "0.22"
time = { version = "0.3", features = ["formatting", "macros"] }
base64url = "0.1"
flate2 = "1.1"
x509-parser = "0.18"
public-suffix = "0.1"
tokio-cron-scheduler = "0.15"
metrics-exporter-prometheus = "0.18"
metrics-process = "2.4"
sea-orm-migration = "1.1.20"

# AWS related libraries
[dependencies.aws-config]
version = "1"
default-features = false
features = ["default-https-client", "rt-tokio"]

[dependencies.aws-sdk-s3]
version = "1"
default-features = false
features = ["default-https-client", "rt-tokio", "sigv4a"]

[dependencies.aws-sdk-route53]
version = "1"
default-features = false
features = ["default-https-client", "rt-tokio"]

[dependencies.aws-sdk-secretsmanager]
version = "1"
default-features = false
features = ["default-https-client", "rt-tokio"]

[dependencies.redis]
version = "1.3"
features = ["connection-manager", "tokio-rustls-comp"]

[dependencies.p256]
version = "0.14"
features = ["alloc", "ecdsa", "pem", "pkcs8"]

[dev-dependencies]
sealed_test = "1.1.0"
sea-orm = { version = "1.1", features = ["mock"] }
testcontainers-modules = { version = "0.15", features = ["localstack", "redis"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7"

[profile.dev.package.backtrace]
opt-level = 3
