[package]
name = "status-list-server"
version = "0.1.0"
edition = "2024"

[features]
default = ["server"]
memory-only = []
server = [
    "aws",
    "cache-moka",
    "certificate-acme",
    "config-file",
    "http",
    "metrics-prometheus",
    "postgres",
    "redis",
    "dep:tikv-jemallocator",
]
http = [
    "dep:axum", "dep:hyper", "dep:hyper-util", "dep:reqwest", "dep:tower",
    "dep:tower-http", "dep:tracing", "dep:tracing-subscriber",
]
postgres = ["dep:jsonwebtoken", "dep:sea-orm", "dep:sea-orm-migration"]
cache-moka = ["dep:moka", "dep:tracing"]
aws = [
    "certificate-acme",
    "dep:aws-config", "dep:aws-sdk-route53", "dep:aws-sdk-s3",
    "dep:aws-sdk-secretsmanager", "dep:color-eyre", "dep:moka", "dep:reqwest",
    "dep:tracing",
]
redis = ["certificate-acme", "dep:redis"]
metrics-prometheus = ["dep:color-eyre", "dep:metrics-exporter-prometheus", "dep:metrics-process"]
certificate-acme = [
    "dep:axum", "dep:base64", "dep:color-eyre", "dep:coset", "dep:hyper", "dep:hyper-rustls",
    "dep:hyper-util", "dep:instant-acme", "dep:jsonwebtoken", "dep:p256",
    "dep:pem", "dep:public-suffix", "dep:rand", "dep:rcgen", "dep:reqwest",
    "dep:rustls", "dep:rustls-pki-types", "dep:time", "dep:tokio-cron-scheduler",
    "dep:tracing", "dep:uuid", "dep:webpki-roots", "dep:x509-parser",
]
config-file = ["dep:config", "dep:dotenvy", "dep:secrecy", "dep:serde-aux"]

[lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unreachable_pub = "warn"

[lints.clippy]
## lint groups.
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
inherits = "dev"
opt-level = 1

[dependencies]
# Async runtime and utilities
tokio = { version = "1.5", features = ["full"] }
async-trait = "0.1"

# Web frameworks
hyper = { version = "1.10", optional = true }
hyper-util = { version = "0.1", optional = true }
reqwest = { version = "0.13", optional = true }
tower = { version = "0.5", optional = true }
hyper-rustls = { version = "0.27", features = ["http2"], optional = true }
axum = { version = "0.8", features = ["macros"], optional = true }
tower-http = { version = "0.7", features = ["catch-panic", "cors", "trace"], optional = true }

# Database and ORM
sea-orm = { version = "1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"], optional = true }
moka = { version = "0.12", features = ["future"], optional = true }

# Cryptography and Security
rand = { version = "0.10", optional = true }
pem = { version = "3", optional = true }
coset = { version = "0.4", optional = true }
instant-acme = { version = "0.8", optional = true }
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "1", optional = true }
rustls-pki-types = { version = "1.15", optional = true }
secrecy = { version = "0.10", features = ["serde"], optional = true }
rcgen = { version = "0.14", features = ["pem"], optional = true }
jsonwebtoken = { version = "10.4", features = ["aws_lc_rs"], optional = true }

# Serialization
serde_json = "1.0"
serde-aux = { version = "4.7", optional = true }
serde = { version = "1.0", features = ["derive"] }

# Configuration and Environment
config = { version = "0.15", optional = true }
dotenvy = { version = "0.15", optional = true }

# Logging and Tracing
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

# Error handling
thiserror = "2.0"
color-eyre = { version = "0.6", optional = true }

# Utility Libraries
uuid = { version = "1.23", optional = true }
base64 = { version = "0.22", optional = true }
time = { version = "0.3", features = ["formatting", "macros"], optional = true }
base64url = "0.1"
flate2 = "1.1"
x509-parser = { version = "0.18", optional = true }
public-suffix = { version = "0.1", optional = true }
tokio-cron-scheduler = { version = "0.15", optional = true }
metrics-exporter-prometheus = { version = "0.18", optional = true }
metrics-process = { version = "2.4", optional = true }
sea-orm-migration = { version = "1.1.20", optional = true }

# AWS related libraries
[dependencies.aws-config]
version = "1"
default-features = false
features = ["default-https-client", "rt-tokio"]
optional = true

[dependencies.aws-sdk-s3]
version = "1"
default-features = false
features = ["default-https-client", "rt-tokio", "sigv4a"]
optional = true

[dependencies.aws-sdk-route53]
version = "1"
default-features = false
features = ["default-https-client", "rt-tokio"]
optional = true

[dependencies.aws-sdk-secretsmanager]
version = "1"
default-features = false
features = ["default-https-client", "rt-tokio"]
optional = true

[dependencies.redis]
version = "1.3"
features = ["connection-manager", "tokio-rustls-comp"]
optional = true

[dependencies.p256]
version = "0.14"
features = ["alloc", "ecdsa", "pem", "pkcs8"]
optional = true

[dev-dependencies]
sealed_test = "1.1.0"
sea-orm = { version = "1.1", features = ["mock"] }
testcontainers-modules = { version = "0.15", features = ["localstack", "redis"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.7", optional = true }

[[bin]]
name = "status-list-server"
path = "src/main.rs"
required-features = ["server"]

[profile.dev.package.backtrace]
opt-level = 3
